updates after feedback

--- a/FinalCaseStudy/FinalCaseStudy.ipynb
+++ b/FinalCaseStudy/FinalCaseStudy.ipynb
@@ -48,7 +48,8 @@
     "\n",
     "To achieve these goals, we will utilize different techniques used in our class so far and will improve the study with each passing week. We will be analyzing the data for recommendation and sentiment classification. \n",
     "\n",
-    "\n"
+    "## Introduction\n",
+    "As a part of this study, I would be studying the effect of parameters such as Age, Positive Feedback Count, Review Text Word Count, Ratings on the Recommended Ind. This would help me in understanding, if a clothing ID is more prone to be recommended by a customer based on these parameters or not. By being able to do so, I will be able to understand, how or what offers can I provide for customers to provide some feedbacks, which would in turn let me understand the performance of a particular clothing id which we can further translate into how many we need to manufacture. The idea is to manufacture or procure more of the materials which are recommended and try to price them in a manner to gain max profits. \n"
    ]
   },
   {
